# csad2526ki401markiangrybok8

./: CMakeLists.txt  README.md  build.sh  ci.bat  log.txt
.github/workflows/: ci.yml  ci.yml.
tests/: unit_tests.cpp
